--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 </footer>
 
     <!-- JS -->
+   <link rel="stylesheet" href="style.css">
     <script src="js/app.js"></script>
 </body>
 </html>
+
