--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 </footer>
 
     <!-- JS -->
-   <link rel="stylesheet" href="style.css">
-    <script src="js/app.js"></script>
+  <link rel="stylesheet" href="style.css">
+<script src="app.js"></script>
 </body>
 </html>
+
 
